css/style.css
/* ... */
h2 {
	margin: 0.8em 0 0.5em;
	font-size: 2em;
}
blockquote {
	border-left: medium none;
    margin: 1em;
    padding: 0;
}
td { 
	vertical-align:top; 
}
a {
	color:#8c1515;
}
a:hover, a:focus, a:active {
	text-decoration: underline;
	color: #000000;
}

hr {
	border-color: #d8d8d8;
    border-left: 0 none #d8d8d8;
    border-right: 0 none #d8d8d8;
    border-top: 0 none #d8d8d8;
}
#article-content a {
	-ms-word-break: break-all;
     word-break: break-all;

     /* Non standard for webkit */
     word-break: break-word;

-webkit-hyphens: auto;
   -moz-hyphens: auto;
        hyphens: auto;
}
#content li ul {
	margin-top:0.5em;
}

/* ----- Button styles ----- */
.btn {
	background:#EDEBE9;
	border: 1px solid #D7D5D3;
	-moz-box-shadow: none;
	-webkit-box-shadow: none;
	box-shadow: none;
	text-shadow:none;
	margin: 0 5px 5px 0;
	-webkit-transition: background 0.3s ease;
	-moz-transition: background 0.3s ease;
	-o-transition: background 0.3s ease;
	transition: background 0.3s ease;
}
.btn-large {
	font-size: 1.3em;
    font-weight: 300;
    letter-spacing: 0.02em;
}
.btn:hover {
	background: #D6D1CD;
    color: #000000;
    border-color:#C0BBB5;
    -webkit-transition: background 0.3s ease;
	-moz-transition: background 0.3s ease;
	-o-transition: background 0.3s ease;
	transition: background 0.3s ease;
}
.btn i {
	font-size: 0.9em;
    margin-right: 0.3em;
    opacity: 0.6;
    filter:alpha(opacity=60); /* For IE8 and earlier */
    -webkit-transition: all 0.3s ease;
	-moz-transition: all 0.3s ease;
	-o-transition: all 0.3s ease;
	transition: all 0.3s ease;
}
.btn:hover i {
	color:#8c1515;
	opacity: 1;
	filter:alpha(opacity=100); /* For IE8 and earlier */
}
.btn-group {
	width:100%;
	background: #ffffff;
	border:1px solid #D8D8D8;
	-webkit-border-radius: 6px;
	-moz-border-radius: 6px;
    border-radius: 6px;
}
.btn .caret {
	position: relative;
	bottom: auto;
    float: right;
    left: auto;
    margin: 0 0.5em 0 0;
    opacity: 0.5;
    filter:alpha(opacity=50); /* For IE8 and earlier */
    right: auto;
    top: auto;
}
.dropdown-menu {
	margin-top: -2px;
}

/* ----- Helper classes ------ */
.width-100 {
	width:100%;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}
.no-wrap {
	white-space: nowrap;
}
.sticky {
	z-index: 10;
}

/* ------ Container ------ */
#container {
	max-width:960px;
	margin-left:auto;
	margin-right:auto;
    -webkit-box-shadow: 0 10px 10px #730F0F;
    -moz-box-shadow: 0 10px 10px #730F0F;
    box-shadow: 0 10px 10px #730F0F;
    padding: 0 3em 1em 3em;
    margin-bottom:0;
    background:#FAF8F6;
	background: -moz-radial-gradient(center, ellipse cover,  #ffffff 37%, #f2ece8 100%); /* FF3.6+ */
	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(37%,#ffffff), color-stop(100%,#f2ece8)); /* Chrome,Safari4+ */
	background: -webkit-radial-gradient(center, ellipse cover,  #ffffff 37%,#f2ece8 100%); /* Chrome10+,Safari5.1+ */
	background: -o-radial-gradient(center, ellipse cover,  #ffffff 37%,#f2ece8 100%); /* Opera 12+ */
	background: -ms-radial-gradient(center, ellipse cover,  #ffffff 37%,#f2ece8 100%); /* IE10+ */
	background: radial-gradient(ellipse at center,  #ffffff 37%,#f2ece8 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f2ece8',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
}

/* ----- Header Wrapper ------ */
#header-wrapper {
	padding-top: 2.5em;
	border-bottom: 1px solid #D8D8D8;
	background-image: url("../symbols/sep-shadow2.png");
    background-position: center bottom;
    background-repeat: no-repeat;
    padding-bottom: 15px;
}


/* ----- Header ------ */
#header {
	margin-bottom: 0;
}
#branding, #search, #navigation {
	display: inline-block;
    vertical-align: top;
}
#branding, .homepage #branding {
	display: block;
    width: 100%;
    margin-bottom: 1em;
    padding-bottom: 2em;
}

/* ----- Site Logo ----- */
#site-logo {
	float:left;
	margin-right: 10px;
	height: 59px;
    margin-left: -2px;
    margin-top: -4px;
    width: auto;
}
#site-logo img {
	max-width: 100%;
	max-height: 100%;
}

/* ----- Site Title ----- */
#site-title, .homepage #site-title {
	font-weight: 300;
	font-size: 2.7em;
	line-height: 1em;
}
#site-title a {
	color:#000;
}
#site-title a:hover {
	text-decoration: none;
}

/* ----- Search ----- */
#search {
	margin:0;
	width: 35%;
}
.search-btn-wrapper {
	text-align: right;
	position:relative;
	height: 0;
}
input {
	max-width: 100%;
}
#search input[type="search"] {
	padding-right:40px;
	width:100%;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
    height: 2em;
	border-color: #D8D8D8;
	-webkit-box-shadow: none;
	-moz-box-shadow: none;
    box-shadow: none;
    font-family: "source sans pro", sans-serif;
    font-weight: 400;
    font-size: 1em;
}
form#search-form {
	margin-bottom:0;
	display: inline-block;
	float: left;
    margin-right: 1em;
}
.btn.search-btn {
    background: none repeat scroll 0 0 transparent;
    border: medium none;
    position: relative;
    -moz-box-shadow: none;
	-webkit-box-shadow: none;
    box-shadow:none;
    position: relative;
}
#search input[type="search"]:focus, #search input[type="search"]:active {
	border-color: #858585;
	-moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(135, 135, 135, 0.6);
	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(135, 135, 135, 0.6);
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(135, 135, 135, 0.6);
    color: #000000;
}
#search .btn.search-btn {
	font-size: 1em;
	margin-right: 0;
    top: -2.24em;
}
#search .btn.search-btn:hover, #search .btn.search-btn:focus, #search .btn.search-btn:active, 
#search.homepage .btn.search-btn:hover {
	background: none;
}

/* ------ Homepage search ------ */
.homepage form#search-form {
	display: block;
	float: none;
	margin-right: 0;
}
/* ... */

